# scottos

./: .gitignore  BUILD_NOTES.md  Cargo.toml  Makefile  README.md  other.md  run.sh  rust-toolchain.toml  x86_64-scottos.json
src/: allocator.rs  fs.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  process.rs  serial.rs  shell.rs  syscall.rs  vga_buffer.rs
src/task/: executor.rs  keyboard.rs  mod.rs
