[package]
name = "scottos"
version = "0.1.0"
edition = "2021"
authors = ["ScottOS Team"]
description = "A minimalist POSIX-compliant operating system written in Rust"

# Add panic configuration
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.31"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
conquer-once = { version = "0.2.0", default-features = false }
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# Target configuration for bare metal
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300 